Overall touching up of things
Moved out apps to it's own file (not 100% certain how to structure it).
Migrated to hyprpaper, hyprlock, and hypridle.
Added some small stuff to keep steam in its own workspace

--- a/user-config/config/hypr/env.conf
+++ b/user-config/config/hypr/env.conf
@@ -7,4 +7,4 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
 # Depends on this theme being installed.
-env = GTK_THEME,Material-DeepOcean-Border
+env = GTK_THEME,Materia-dark
