--- a/user-config/config/hypr/hyprland.conf
+++ b/user-config/config/hypr/hyprland.conf
@@ -16,57 +16,11 @@ $bg = $hypr-conf/bg.jpg
 
 source = $hypr-conf/monitors.conf
 
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Essential apps
-$terminal = foot
-$browser = firefox --MOZ_LOG_FILE=~/.tmp/firefox.log
-$editor = emacs
-$slack = slack
-$run = rofi -show drun
-
-# Sound related
-$music = spotify
-$music-ctl = $local-bin/spotify-ctl
-
-# Print screen
-$print = grim ~/Screenies/$(date +'%s_grim.png')
-$print-region = grim -g "$(slurp)" ~/Screenies/$(date +'%s_grim.png')
-
-# Session locking
-$locker = $local-bin/locker.sh swaylock -i "$bg"
-$idler = swayidle timeout 900 '$locker && hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on' before-sleep '$locker'
-
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
 source = $hypr-conf/env.conf
-
-#################
-### AUTOSTART ###
-#################
-
-# Set up a tmp directory for session stuffs
-#exec-once = mkdir '$hypr-tmp'
-# Lullul
-exec-once = waybar
-exec-once = swaybg -i $bg
-# Sound (these processes are not considerate)
-exec-once = /usr/bin/pipewire
-exec-shutdown = pkill pipewire
-exec-once = /usr/bin/wireplumber
-exec-shutdown = pkill wireplumber
-# Idler
-exec-once = $idler
-# Screen-sharing, the rest should auto-load
-exec-once = /usr/lib/xdg-desktop-portal-hyprland
-# Primary selection!!
-exec-once = wl-paste --primary --watch wl-copy
 
 #####################
 ### LOOK AND FEEL ###
@@ -126,19 +80,21 @@ source = $hypr-conf/input.conf
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, B, exec, $browser
-bind = $mainMod, E, exec, $editor
-bind = $mainMod, L, exec, $locker
-bind = $mainMod, S, exec, [workspace special:slack silent] $slack
-bind = $mainMod, R, exec, $run
-bind = $mainMod, M, exec, [workspace special:music silent] $music
+# No-op unless overridden by apps.conf
+$music-ctl = true
+$print = true
+$print-region = true
+
+# Apps and app shourtcuts are sourced from here
+source = apps.conf
+
+# Print screen
 bind = , Print, exec, $print
 bind = CTRL, Print, exec, $print-region
 
 # Audio control
-bind = , XF86AudioPlay, exec, $music-ctl playpause
+bind = , XF86AudioPlay, exec, $music-ctl play-pause
+bind = , XF86AudioStop, exec, $music-ctl stop
 bind = , XF86AudioPrev, exec, $music-ctl previous
 bind = , XF86AudioNext, exec, $music-ctl next
 
@@ -154,8 +110,8 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-bind = $mainMod, Tab, cyclenext
-bind = $mainMod, Tab, bringactivetotop
+bind = $mainMod SHIFT, TAB, cyclenext
+bind = $mainMod SHIFT, TAB, bringactivetotop
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -181,16 +137,14 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Special workspaces
+# Special workspace
 bind = $mainMod, code:49, togglespecialworkspace, magic
 bind = $mainMod SHIFT, code:49, movetoworkspace, special:magic
-bind = $mainMod, F2, togglespecialworkspace, music
-bind = $mainMod, F1, togglespecialworkspace, slack
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = ALT, TAB, workspace, m+1
 bind = ALT SHIFT, TAB, workspace, m-1
-bind = CTRL, TAB, workspace, emptym
+bind = $mainMod, TAB, workspace, emptym
 bind = $mainMod, mouse_down, workspace, m+1
 bind = $mainMod, mouse_up, workspace, m-1
 
