--- a/user-config/config/waybar/config.jsonc
+++ b/user-config/config/waybar/config.jsonc
@@ -1,4 +1,6 @@
 // -*- mode: jsonc -*-
+
+// Pretty much a work in progress /koff
 {
     // "layer": "top", // Waybar at top layer
     "position": "bottom", // Waybar position (top|bottom|left|right)
@@ -8,7 +10,7 @@
     // Choose the order of the modules
     "modules-left": [
         "hyprland/workspaces"
-//        "sway/mode",
+//        "hyprland/submap"
 //        "sway/scratchpad",
 //        "custom/media"
     ],
@@ -19,7 +21,7 @@
 //        "mpd",
 //        "idle_inhibitor",
 //        "pulseaudio",
-//        "network",
+        "network",
 //        "power-profiles-daemon",
         "cpu",
         "memory",
@@ -138,7 +140,7 @@
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-full": "{capacity}% {icon}",
+        "format-full": "{capacity}% ",
         "format-charging": "{capacity}% ",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
@@ -161,7 +163,7 @@
       }
     },
     "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "interface": "wlan0", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%) ",
         "format-ethernet": "{ipaddr}/{cidr} ",
         "tooltip-format": "{ifname} via {gwaddr} ",
