added missing script.

--- a/user-config/config/hypr/apps.conf
+++ b/user-config/config/hypr/apps.conf
@@ -15,7 +15,7 @@ $run = rofi -show drun
 
 # Sound related
 $music = spotify-launcher
-$music-ctl = playerctl
+$music-ctl = playerctl -p spotify
 
 # Print screen
 $print = grim ~/Screenies/$(date +'%s_grim.png')
