--- a/user-config/config/hypr/hyprpaper.conf
+++ b/user-config/config/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = ~/.config/hypr/bg.jpg
-wallpaper = ,~/.config/hypr/bg.jpg
+wallpaper {
+	monitor =
+	path = ~/.config/hypr/bg.jpg
+}
+
+splash = false
